--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="flex flex-col justify-between mb10">
                 <form action="#">
                     <div class="flex space-x-4">
-                        <input type="email" class="flex-1 border-none px-6 py-3 rounded-full focus:outline-none" placeholder="Updates in your inbox…">
+                        <input type="email" class="flex-1 border-none px-6 py-3 rounded-full focus:outline-none" placeholder="Updates in your inbox…" required>
 
                         <button class="py-3 px-8 bg-brightRed rounded-full text-white shadow-xl hover:bg-brightRedLight focus:outline-none border-none">
                             GO
