--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- Flex Container -->
         <div class="container flex flex-col mt-10 px-4 mx-auto space-y-12 md:space-y-0 md:flex-row">
             <!-- Heading Left -->
-            <div class="flex flex-col items-center space-y-10 md:w-1/2">
+            <div class="flex flex-col itemscente space-y-10 md:w-1/2">
                 <h2 class="max-w-md text-4xl font-bold text-center md:text-left">What's different about Manage?</h2>
                 <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">Manage provides all the functionality your team needs, without 
                    the complexity. Our software is tailor-made for modern digital 
