--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     </a>
 
                     <!-- Link 3 -->
-                    <a href="www.twiter.com/cybprom">
+                    <a href="https://twitter.com/cybprom">
                         <img src="./images/icon-twitter.svg" class="h-8 md:h-7 md:mr-14" alt="Twitter">
                     </a>
 
